--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -13,8 +13,27 @@ h3 {margin-top: 5rem;}
   margin-top: 10px;
 }
 
+.background_img {
+  position: relative;
+  overflow: visible;
+  display: block;
+  margin: 0 auto;
+  width: 161.2%;
+  max-width: 5000px;
+  left: -31%;
+  top: -18px;
+}
+.credits {
+  position: relative;
+  text-align: right;
+  margin: 0 auto;
+  font-size: 10px;
+  right: -29.8%;
+  top: -28px;
+}
+
 .gssi_logo {
-  width:130px; 
+  width:200px; 
   padding: 2px; 
   float: right; 
   margin-top: 0px;
